--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,16 @@
     <title>{% block page_name%}{% endblock page_name%}| Nbnb</title>
   </head>
   <body>
-    {%include "partials/header.html" %} {%block content%} {% endblock %}
+    <header>
+    {%include "partials/nav.html" %}
+    {% block search-bar %}
+       <form method="get" action="{% url 'rooms:search' %}">
+        <input name="city" placeholder="Search by City" />
+      </form>
+    {% endblock search-bar %}    
+    </header>
+    {%block content%} {% endblock %}
+    
     {%include "partials/footer.html" %}
   </body>
 </html>
