Manually creating a search filter

--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -66,8 +66,8 @@
         </div>
 
         <div>
-            <label for="super_host">By Superhost only?</label>
-            <input type="checkbox" name="super_host" id="super_host" {% if super_host %} checked {% endif %} />
+            <label for="superhost">By Superhost only?</label>
+            <input type="checkbox" name="superhost" id="superhost" {% if superhost %} checked {% endif %} />
         </div>
 
 
