--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,7 +1,7 @@
 
 <a href="{% url "core:home" %}">Nbnb</a>
   <ul>
-    <li><a href="#">Login</a></li>
+    <li><a href="{% url "users:login"%}">Login</a></li>
   </ul>
 
 
