--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -8,7 +8,7 @@
 {% endblock search-bar %}
 
 {% block content %}
-    <form method="POST" action"{% url "users:login"@}">
+    <form method="POST" action"{% url "users:login" %}">
         {% csrf_token %}
         {{form.as_p}}
         <button>Login</button>
