--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -5,7 +5,8 @@
     {% if user.is_authenticated %}
     <li><a href="{% url "users:logout"%}">Log Out</a></li>
     {% else %}
-    <li><a href="{% url "users:login"%}">Log In</a></li>
+      <li><a href="{% url "users:login"%}">Log In</a></li>
+      <li><a href="{% url "users:signup"%}">Sign up</a></li>
     {% endif %}
       
     
