--- a/templates/partials/social_login.html
+++ b/templates/partials/social_login.html
@@ -3,7 +3,7 @@
     <a href="{% url 'users:github_login'%}">
         Continue with Github
     </a>
-    <a>
+    <a href="{% url 'users:kakao_login'%}">
         Continue with Kakao
     </a>
 
