--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,21 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="{% static "css/styles.css" %}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block page_name%}{% endblock page_name%}| Nbnb</title>
   </head>
   <body>
     <header>
-    {%include "partials/nav.html" %}
-    {% block search-bar %}
-       <form method="get" action="{% url 'rooms:search' %}">
+      {%include "partials/nav.html" %} {% block search-bar %}
+      <form method="get" action="{% url 'rooms:search' %}">
         <input name="city" placeholder="Search by City" />
       </form>
-    {% endblock search-bar %}    
+      {% endblock search-bar %}
     </header>
-    {%block content%} {% endblock %}
-    
-    {%include "partials/footer.html" %}
+    {%block content%} {% endblock %} {%include "partials/footer.html" %}
   </body>
 </html>
