--- a/templates/base.html
+++ b/templates/base.html
@@ -8,13 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block page_name%}{% endblock page_name%}| Nbnb</title>
   </head>
-  <body>
-    <header>
-      {%include "partials/nav.html" %} {% block search-bar %}
-      <form method="get" action="{% url 'rooms:search' %}">
-        <input name="city" placeholder="Search by City" />
-      </form>
-      {% endblock search-bar %}
+  <body class = "text-gray-800">
+    <header class="container max-w-full flex items-center justify-between px-6 h-16 border-b border-gray-400">
+      <div class="flex items-center">
+        <a href="{% url "core:home" %}" class = "mr-4">
+          <img class="w-24" src="{% static 'img/logo.png' %}" />
+        </a>  
+         {% block search-bar %}
+        <form method="get" action="{% url 'rooms:search' %}">
+          <input class="border px-2 py-1 rounded" name="city" placeholder="Search by City" />
+        </form>
+        {% endblock search-bar %}          
+      </div>
+      {%include "partials/nav.html" %}
     </header>
     {%block content%} {% endblock %} {%include "partials/footer.html" %}
   </body>
