--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,12 +1,10 @@
-
-<a href="{% url "core:home" %}">Nbnb</a>
-  <ul>
+  <ul class = "flex items-center text-base font-semibold">
     
     {% if user.is_authenticated %}
-    <li><a href="{% url "users:logout"%}">Log Out</a></li>
+    <li class="ml-5 mr-3"><a href="{% url "users:logout"%}">Log Out</a></li>
     {% else %}
-      <li><a href="{% url "users:login"%}">Log In</a></li>
-      <li><a href="{% url "users:signup"%}">Sign up</a></li>
+      <li class="ml-5 mr-3"><a href="{% url "users:login"%}">Log In</a></li>
+      <li class="ml-5 mr-3"><a href="{% url "users:signup"%}">Sign up</a></li>
     {% endif %}
       
     
