--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
+
+.search-box {
+  transition: box-shadow 0.2s linear;
+}
+
+.nav_link {
+  @apply ml-5 mr-3 border-b-2 border-white hover:border-gray-500 h-full flex items-center;
+  a {
+    @apply py-8 px-2;
+  }
+}
+
 @tailwind utilities;
