--- a/templates/base.html
+++ b/templates/base.html
@@ -8,15 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block page_name%}{% endblock page_name%}| Nbnb</title>
   </head>
-  <body class = "text-gray-800">
-    <header class="container max-w-full flex items-center justify-between px-6 h-16 border-b border-gray-400">
+  <body class = "text-gray-900 mt-20">
+    <header class="container max-w-full inset-0 flex items-center justify-between px-6 h-16 border-b border-gray-400 fixed bg-white">
       <div class="flex items-center">
         <a href="{% url "core:home" %}" class = "mr-4">
           <img class="w-24" src="{% static 'img/logo.png' %}" />
         </a>  
          {% block search-bar %}
         <form method="get" action="{% url 'rooms:search' %}">
-          <input class="border px-2 py-1 rounded" name="city" placeholder="Search by City" />
+          <input class="search-box w-80 border px-4 py-1.5 font-medium placeholder-gray-600 rounded shadow-md hover:shadow-xl focus:outline-none" name="city" placeholder="Search by City" />
         </form>
         {% endblock search-bar %}          
       </div>
