--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,13 +1,17 @@
-{% extends 'base.html' %} {% block page_name %} Home {% endblock page_name %}
+{% extends 'base.html' %}
+{% block page_name %} Home {% endblock page_name %}
 {%block content%} 
 <a class="ml-1">{{now}}</a>
-{% for room in object_list %}
-  <h4 class="ml-3">
-    <a href ="{% url "rooms:detail" room.pk %}">
-    {{room.name}} / ${{room.price}}
-    </a>
-  </h4>
-{% endfor %}
+<div class="container rounded-xl mx-auto bg-gray-800 h-50vh mt-10 mb-10 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1536315238512-4c8cebdaaf93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop)">
+
+</div>
+  {% for room in object_list %}
+    <h4 class="ml-3">
+      <a href ="{% url "rooms:detail" room.pk %}">
+      {{room.name}} / ${{room.price}}
+      </a>
+    </h4>
+  {% endfor %}
 <h5 class="ml-2">
   {% if page_obj.has_previous %}
   <a href="?page={{page_obj.previous_page_number}}">Prev</a>
