--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -1,27 +1,29 @@
-{% extends 'base.html' %}
-{% block page_name %} Home {% endblock page_name %}
-{%block content%} 
+{% extends 'base.html' %} {% block page_name %} Home {% endblock page_name %}
+{%block content%}
 <a class="ml-1">{{now}}</a>
-<div class="container rounded-xl mx-auto bg-gray-800 h-50vh mt-10 mb-10 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1536315238512-4c8cebdaaf93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop)">
 
+<div class="container mx-auto">
+      <div class="rounded-xl bg-gray-800  h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1536315238512-4c8cebdaaf93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop)"></div>
+      <div class="flex flex-wrap">
+        {% for room in rooms %}
+          {%include 'partials/room_card.html' with room=room %}
+        {% endfor %}
+    </div>
+
+      <h5>
+        {% if page_obj.has_previous %}
+          <a href="?page={{page_obj.previous_page_number}}">Prev</a>
+        {% endif %} Page{{page_obj.number}} of {{page_obj.paginator.num_pages}} 
+        
+        {% if page_obj.has_next %}
+          <a href="?page={{page_obj.next_page_number}}">Next</a>
+        {% endif %}
+        
+        {% for page_obj in page_obj.paginator.page_range %}
+          <a href="?page={{page_obj}}">
+            {{page_obj}}
+          </a>
+        {% endfor %} 
+        {% endblock content%}
+      </h5>
 </div>
-  {% for room in object_list %}
-    <h4 class="ml-3">
-      <a href ="{% url "rooms:detail" room.pk %}">
-      {{room.name}} / ${{room.price}}
-      </a>
-    </h4>
-  {% endfor %}
-<h5 class="ml-2">
-  {% if page_obj.has_previous %}
-  <a href="?page={{page_obj.previous_page_number}}">Prev</a>
-  {% endif %}
-   Page{{page_obj.number}} of {{page_obj.paginator.num_pages}}
-  {% if page_obj.has_next %}
-  <a href="?page={{page_obj.next_page_number}}">Next</a>
-  {% endif %}
-  
- {% for page_obj in page_obj.paginator.page_range%}
-  <a href="?page={{page_obj}}">{{page_obj}}</a>
-  {% endfor %} {% endblock content%}
-</h5>
