--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="{% static "css/styles.css" %}" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block page_name%}{% endblock page_name%}| Nbnb</title>
   </head>
-  <body class = "text-gray-900 mt-20">
+  <body class = "text-gray-900 mt-20 font-light">
     <header class="container max-w-full inset-0 flex items-center justify-between px-6 h-16 border-b border-gray-400 fixed bg-white">
       <div class="flex items-center">
         <a href="{% url "core:home" %}" class = "mr-4">
