--- a/templates/partials/room_card.html
+++ b/templates/partials/room_card.html
@@ -1,7 +1,20 @@
-   <div class="w-1/4 mb-10">
+   <div class="w-1/4 mb-10 px-3">
 
-      <div class="w-10/12 h-56 bg-cover bg-center rounded-lg" style="background-image: url({{room.first_photo}});"></div>
-
+      <div class="w-full h-56 bg-cover bg-center rounded-lg mb-1" style="background-image: url({{room.first_photo}});"></div>
+            <div class="flex justify-between" >
+                  <div>
+                     
+                     {% if room.host.superhost %}
+                     <span class="uppercase font-semibold text-xs border rounded text-black border-black py-1 px-1 mr-1"> Superhost </span>   
+                     {% endif %}
+                        
+                     <span class="text-sm text-gray-600"> {{room.city}} </span>
+                  </div>
+                  <span class="text-sm flex items-center">
+                     <i class ="fas fa-star text-red-600 text-xs mr-1"></i>
+                        {{room.total_rating}}
+                  </span>
+            </div>
 
    </div>
    
