#20 Room cards, paginating done!

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
       </div>
       {%include "partials/nav.html" %}
     </header>
-    {%block content%} {% endblock %} {%include "partials/footer.html" %}
+    {%block content%} {% endblock %} 
+    {%include "partials/footer.html" %}
   </body>
+
+
 </html>
