--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -2,7 +2,7 @@
 {%block content%}
 <a class="ml-1">{{now}}</a>
 
-<div class="container mx-auto">
+<div class="container mx-auto pb-10">
       <div class="rounded-xl bg-gray-800  h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1536315238512-4c8cebdaaf93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop)"></div>
       <div class="flex flex-wrap">
         {% for room in rooms %}
@@ -10,20 +10,27 @@
         {% endfor %}
     </div>
 
-      <h5>
+      <div class="flex items-center mx-auto justify-center container">
         {% if page_obj.has_previous %}
-          <a href="?page={{page_obj.previous_page_number}}">Prev</a>
-        {% endif %} Page{{page_obj.number}} of {{page_obj.paginator.num_pages}} 
-        
-        {% if page_obj.has_next %}
-          <a href="?page={{page_obj.next_page_number}}">Next</a>
+          <a href="?page={{page_obj.previous_page_number}}"><i class="fas fa-arrow-left fa-lg text-green-500"></i></a>
         {% endif %}
         
-        {% for page_obj in page_obj.paginator.page_range %}
-          <a href="?page={{page_obj}}">
-            {{page_obj}}
-          </a>
-        {% endfor %} 
-        {% endblock content%}
-      </h5>
+        <span class="font-medium text-lg mx-2">{{page_obj.number}} of {{page_obj.paginator.num_pages}} </span>
+        
+        
+        {% if page_obj.has_next %}
+          <a href="?page={{page_obj.next_page_number}}"><i class="fas fa-arrow-right fa-lg text-green-500"></i></a>
+        {% endif %}
 </div>
+        <div class="flex w-full items-center justify-center container">
+          {% for page_obj in page_obj.paginator.page_range %}
+            <a class="font-medium text-lg ml-1" href="?page={{page_obj}}">
+              {{page_obj}}
+            </a>
+        {% endfor %} 
+        </div>
+        
+
+
+</div>
+        {% endblock content%}
