--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,1 +1,9 @@
-<footer>&copy; Nbnb</footer>
+<footer class = "container mx-auto text-center py-10 border-t font-medium flex flex-col text-gray-500">
+    <span>
+        Please do not copy us.
+    </span>
+    <span>
+        &copy; 2021 Tbnb, Inc. All rights reserved. 
+    </span>
+</footer>
+    
