--- a/templates/partials/social_login.html
+++ b/templates/partials/social_login.html
@@ -1,10 +1,10 @@
-<div>
+<div class="flex flex-col w-11/12">
     
-    <a href="{% url 'users:github_login'%}">
-        Continue with Github
+    <a href="{% url 'users:github_login'%}" class="w-full font-bold border-2 mb-2 text-gray-700 border-gray-500 text-center rounded-sm py-3">
+        <i class="fab fa-github-alt mr-2 fa-lg"></i>Continue with Github
     </a>
-    <a href="{% url 'users:kakao_login'%}">
-        Continue with Kakao
+    <a href="{% url 'users:kakao_login'%}" class="w-full font-bold border border-yellow-300 bg-yellow-300 text-center rounded-sm py-3 mb-2">
+        <i class="fas fa-comment mr-2 fa-lg"></i>Continue with Kakao
     </a>
 
 </div>
