--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -8,14 +8,16 @@
 {% endblock search-bar %}
 
 {% block content %}
+    <div class="container lg:w-5/12 md:w-1/2 xl:w-2/5 mx-auto my-10 flex flex-col items-center border p-6 border-gray-500">
+        {% include 'partials/social_login.html' %}
+    
+        <form method="POST" action"{% url "users:login" %}">
+            {% csrf_token %}
+            {{form.as_p}}
+            <button>Login</button>
+        </form>
 
-    {% include 'partials/social_login.html' %}
-
-    <form method="POST" action"{% url "users:login" %}">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button>Login</button>
-    </form>
+    </div>
 
 {% endblock content %}
 
