--- a/templates/partials/social_login.html
+++ b/templates/partials/social_login.html
@@ -1,10 +1,16 @@
 <div class="flex flex-col w-11/12">
     
-    <a href="{% url 'users:github_login'%}" class="w-full font-bold border-2 mb-2 text-gray-700 border-gray-500 text-center rounded-sm py-3">
+    <a href="{% url 'users:github_login'%}" class="btn border-2 mb-2 text-gray-700 border-gray-500">
         <i class="fab fa-github-alt mr-2 fa-lg"></i>Continue with Github
     </a>
-    <a href="{% url 'users:kakao_login'%}" class="w-full font-bold border border-yellow-300 bg-yellow-300 text-center rounded-sm py-3 mb-2">
+    <a href="{% url 'users:kakao_login'%}" class="btn border-yellow-300 bg-yellow-300 mb-2">
         <i class="fas fa-comment mr-2 fa-lg"></i>Continue with Kakao
     </a>
+    
+</div>
 
+<div class="flex items-center w-11/12">
+    <div class="h-px w-full bg-gray-400"></div>
+    <span class="font-bold text-gray-600 text-sm mx-3">or</span>
+    <div class="h-px w-full bg-gray-400"></div>
 </div>
