--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -8,15 +8,23 @@
 {% endblock search-bar %}
 
 {% block content %}
-    
+<div class="container lg:w-5/12 md:w-1/2 xl:w-2/5 mx-auto my-10 flex flex-col items-center border p-6 border-gray-500">
     {% include 'partials/social_login.html' %}
 
-    <form method="POST" action"{% url "users:signup" %}">
+    <form method="POST" action"{% url "users:signup" %} class="w-11/12">
         {% csrf_token %}
-        {{form.as_p}}
-        <button>Sign Up</button>
+        {{form.first_name}}
+        {{form.last_name}}
+        {{form.email}}
+        {{form.password}}
+        {{form.password1}}
+        <button class='btn text-white bg-red-400 mb-2'>Sign up</button>
     </form>
+    <div class="mt-5">
+        <span class="mr-2">have an account?</span><a class="font-medium text-green-700" href="{%url 'users:login' %}">Log in here</a>
+    </div>
 
+</div>
 {% endblock content %}
 
 
