--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -13,11 +13,52 @@
 
     <form method="POST" action"{% url "users:signup" %} class="w-11/12">
         {% csrf_token %}
-        {{form.first_name}}
-        {{form.last_name}}
-        {{form.email}}
-        {{form.password}}
-        {{form.password1}}
+
+        <div class="input">
+            {{form.first_name}}
+            {% if form.first_name.errors %}  
+                {% for error in form.first_name.errors %}
+                <span class="text-red-600 font-medium text-sm">{{error}}</span>
+                {% endfor %}   
+            {% endif %}
+        </div>
+            
+        <div class="input">
+            {{form.last_name}}
+            {% if form.last_name.errors %}  
+                {% for error in form.last_name.errors %}
+                <span class="text-red-600 font-medium text-sm">{{error}}</span>
+                {% endfor %}   
+            {% endif %}
+        </div>
+    
+        <div class="input">
+            {{form.email}}
+            {% if form.email.errors %}  
+                {% for error in form.email.errors %}
+                <span class="text-red-600 font-medium text-sm">{{error}}</span>
+                {% endfor %}   
+            {% endif %}
+        </div>
+
+        <div class="input">
+            {{form.password}}
+            {% if form.password.errors %}  
+                {% for error in form.password.errors %}
+                <span class="text-red-600 font-medium text-sm">{{error}}</span>
+                {% endfor %}   
+            {% endif %}
+        </div>
+
+        <div class="input">
+            {{form.password1}}
+            {% if form.password1.errors %}  
+                {% for error in form.password1.errors %}
+                    <span class="text-red-600 font-medium text-sm">{{error}}</span>
+                {% endfor %}   
+            {% endif %}
+        </div>
+
         <button class='btn text-white bg-red-400 mb-2'>Sign up</button>
     </form>
     <div class="mt-5">
