--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -11,56 +11,8 @@
 <div class="container lg:w-5/12 md:w-1/2 xl:w-2/5 mx-auto my-10 flex flex-col items-center border p-6 border-gray-500">
     {% include 'partials/social_login.html' %}
 
-    <form method="POST" action"{% url "users:signup" %} class="w-11/12">
-        {% csrf_token %}
+    {% include 'mixins/auth/auth_form.html' with form=form%}
 
-        <div class="input">
-            {{form.first_name}}
-            {% if form.first_name.errors %}  
-                {% for error in form.first_name.errors %}
-                <span class="text-red-600 font-medium text-sm">{{error}}</span>
-                {% endfor %}   
-            {% endif %}
-        </div>
-            
-        <div class="input">
-            {{form.last_name}}
-            {% if form.last_name.errors %}  
-                {% for error in form.last_name.errors %}
-                <span class="text-red-600 font-medium text-sm">{{error}}</span>
-                {% endfor %}   
-            {% endif %}
-        </div>
-    
-        <div class="input">
-            {{form.email}}
-            {% if form.email.errors %}  
-                {% for error in form.email.errors %}
-                <span class="text-red-600 font-medium text-sm">{{error}}</span>
-                {% endfor %}   
-            {% endif %}
-        </div>
-
-        <div class="input">
-            {{form.password}}
-            {% if form.password.errors %}  
-                {% for error in form.password.errors %}
-                <span class="text-red-600 font-medium text-sm">{{error}}</span>
-                {% endfor %}   
-            {% endif %}
-        </div>
-
-        <div class="input">
-            {{form.password1}}
-            {% if form.password1.errors %}  
-                {% for error in form.password1.errors %}
-                    <span class="text-red-600 font-medium text-sm">{{error}}</span>
-                {% endfor %}   
-            {% endif %}
-        </div>
-
-        <button class='btn text-white bg-red-400 mb-2'>Sign up</button>
-    </form>
     <div class="mt-5">
         <span class="mr-2">have an account?</span><a class="font-medium text-green-700" href="{%url 'users:login' %}">Log in here</a>
     </div>
