--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -6,7 +6,7 @@
       <div class="rounded-xl bg-gray-800  h-50vh mt-32 mb-24 bg-cover bg-center" style="background-image:url(https://images.unsplash.com/photo-1536315238512-4c8cebdaaf93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop)"></div>
       <div class="flex flex-wrap">
         {% for room in rooms %}
-          {%include 'partials/room_card.html' with room=room %}
+          {%include 'mixins/room_card.html' with room=room %}
         {% endfor %}
     </div>
 
