--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -11,12 +11,7 @@
     <div class="container lg:w-5/12 md:w-1/2 xl:w-2/5 mx-auto my-10 flex flex-col items-center border p-6 border-gray-500">
         {% include 'partials/social_login.html' %}
 
-        <form method="POST" action"{% url "users:login" %}" class="w-11/12">
-            {% csrf_token %}
-            {{form.email}}
-            {{form.password}}
-            <button class='btn text-white bg-red-400 mb-2'>Login</button>
-        </form>
+        {% include 'mixins/auth/auth_form.html' with form=form%}
 
         <div class="mt-5">
             <span class="mr-2">Don't have an account?</span><a class="font-medium text-green-700" href="{%url 'users:signup' %}">Sign up here</a>
