--- a/templates/partials/messages.html
+++ b/templates/partials/messages.html
@@ -1,7 +1,7 @@
 {% if messages %}
-<ul class="messages">
+<ul class="absolute mx-auto left-0 right-0 z-10 flex justify-center">
     {% for message in messages %}
-    <li class="message {% if message.tags %} {{ message.tags }}{% endif %}"">{{ message }}</li>
+    <li class="font-medium bg-gray-600 rounded-xl px-1 text-white {% if message.tags %} {{ message.tags }}{% endif %}"">{{ message }}</li>
     {% endfor %}
 </ul>
 {% endif %}
