--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -37,4 +37,40 @@ form {
   }
 }
 
+@keyframes messageFadeIn {
+  0%{
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  5%{
+    opacity: 1;
+    transform: translateY(20px);
+  }
+  95%{
+    opacity: 1;
+    transform: translateY(20px);
+  }
+  100%{
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+}
+
+.message{
+  animation: messageFadeIn 5s ease-in-out forwards;
+  &.error{
+    @apply bg-red-600;
+  }
+  &.info{
+    @apply bg-blue-500;
+  }
+  &.success{
+    @apply bg-green-500;
+  }
+  &.warning{
+    @apply bg-yellow-400;
+  }
+}
+
+
 @tailwind utilities;
