--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -9,7 +9,7 @@
 </div>
 
 <div>
-    <h3>By: {{room.host.username}} 
+    <h3>By: <a href="{{room.host.get_absolute_url}}">{{room.host.username}}</a>
         {% if room.host.superhost %}
             (superhost)
         {% endif %}
