#21 styling user profile

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -13,7 +13,12 @@
 }
 
 .btn{
-  @apply w-full font-bold border text-lg text-center rounded-sm py-3
+  @apply w-full font-bold border text-lg text-center rounded-sm py-3;
+}
+
+
+.btn-link{
+  @apply w-full font-bold border text-lg text-center py-1 rounded-lg bg-red-400;
 }
 
 input{
