--- a/templates/users/user_detail.html
+++ b/templates/users/user_detail.html
@@ -8,6 +8,7 @@
 {% endblock search-bar %}
 
 {% block content %}
+   <div class="">
     <div class="container lg:w-5/12 md:w-1/2 xl:w-2/5 mx-auto my-10 flex flex-col items-center border p-6 border-gray-500">
             
         {% include "mixins/user_avatar.html" with user=user_obj %}                
@@ -19,10 +20,28 @@
             {% endif %}
 
         </div>
-        <span class="text-lg mb-1">{{user.bio}}</span>
-            <a href="#" class="btn"> Edit Profile </a>
+        <span class="text-lg mb-3">{{user_obj.bio}}</span>
+        
+        {% if user == user_obj %}
+            <a href="#" class="btn-link"> Edit Profile </a>
+        {% endif %}
+            
     </div>
 
+    
+    {% if user_obj.rooms.count > 0 %}
+        <div class="container mx-auto flex flex-col items-center">
+        <h3 class="mb-8">{{user_obj.first_name}}'s Room</h3>
+        <div class="flex flex-wrap">
+            {% for room in user_obj.rooms.all %}
+              {%include 'mixins/room_card.html' with room=room %}
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
+   </div>
+        
+    
 {% endblock content %}
 
 
