--- a/templates/mixins/auth/auth_form.html
+++ b/templates/mixins/auth/auth_form.html
@@ -1,4 +1,4 @@
-<form method="POST" action"{% url "users:signup" %} class="w-11/12">
+<form method="POST" action"{% url "users:signup" %} class="w-11/12" enctype="multipart/form-data">
     {% csrf_token %} 
     {% if form.non_field_errors %}
         {% for error in form.non_field_errors %}
@@ -9,5 +9,5 @@
     {% for field in form %}
        {% include 'mixins/auth/form_input.html' with field=field %}
     {% endfor %}
-    <button class='btn text-white bg-red-400 mb-2'>Sign up</button>
+    <button class='btn text-white bg-red-400 mb-2'>{{cta}}</button>
 </form>
