--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -21,11 +21,26 @@
   @apply w-full font-bold border text-lg text-center py-1 rounded-lg bg-red-400;
 }
 
-input{
+input,
+textarea,
+ {
   @apply rounded-sm py-3 font-light text-lg w-full text-left border border-gray-600 px-5;
   &:focus{
     @apply focus:outline-none focus:border-green-500
   }
+}
+
+textarea{
+  resize: none;
+  height: 100px
+}
+
+select{
+  @apply rounded-sm font-light text-lg w-full text-left border border-gray-600 px-5;
+  &:focus{
+    @apply outline-none border-green-500
+  }
+  height: 40px;
 }
 
 form {
