--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -11,7 +11,7 @@
 <div class="container lg:w-5/12 md:w-1/2 xl:w-2/5 mx-auto my-10 flex flex-col items-center border p-6 border-gray-500">
     {% include 'partials/social_login.html' %}
 
-    {% include 'mixins/auth/auth_form.html' with form=form%}
+    {% include 'mixins/auth/auth_form.html' with form=form cta="Sign Up"%}
 
     <div class="mt-5">
         <span class="mr-2">have an account?</span><a class="font-medium text-green-700" href="{%url 'users:login' %}">Log in here</a>
