--- a/templates/users/update-profile.html
+++ b/templates/users/update-profile.html
@@ -9,12 +9,11 @@
 
 {% block content %}
     <div class="container lg:w-5/12 md:w-1/2 xl:w-2/5 mx-auto my-10 flex flex-col items-center border p-6 border-gray-500">
-        
         {% include 'mixins/auth/auth_form.html' with form=form cta="Update Profile"%}
 
         <h5>logged in with {{object.login_method}}!</h5>
         
-        {% if object.login_method == "password" %}
+        {% if object.login_method == "EMAIL" %}
             <div class="mt-5">
                 </span><a class="font-medium text-green-700" href="{%url 'users:password' %}">Change Password</a>
             </div>
