--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -8,10 +8,10 @@
 {% endblock search-bar %}
 
 {% block content %}
-    <div class="container lg:w-5/12 md:w-1/2 xl:w-2/5 mx-auto my-10 flex flex-col items-center border p-6 border-gray-500">
+    <div class="container h-5/6 lg:w-5/12 md:w-1/2 xl:w-2/5 mx-auto my-10 flex flex-col items-center border p-6 border-gray-500">
         {% include 'partials/social_login.html' %}
 
-        {% include 'mixins/auth/auth_form.html' with form=form%}
+        {% include 'mixins/auth/auth_form.html' with form=form cta="log in"%}
 
         <div class="mt-5">
             <span class="mr-2">Don't have an account?</span><a class="font-medium text-green-700" href="{%url 'users:signup' %}">Sign up here</a>
