--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -19,7 +19,7 @@
     <div class="container mx-auto flex justify-around pb-56">
       <div class="w-1/2">
         <div class="flex justify-between">
-            <div>
+            <div class="mr-2 mb-5">
               <h4 class="text-3xl font-medium mb-px">{{room.name}}</h4>
               <span class="text-gray-700 font-light">{{room.city}}</span>
             </div>
@@ -28,13 +28,43 @@
               <span class="mt-2 text-gray-500 ml-4">{{room.host.first_name}}</span>
             </a>
         </div>
-        <div class="flex">
-          {{room.room_type}}
-          {{room.get_beds}}
-          {{room.bedrooms}}
+        <div class="flex border-section">
+          <span class="mr-3 font-light">{{room.room_type}}</span>
+          <span class="mr-3 font-light">{{room.beds}} bed{{room.beds|pluralize}}</span>
+          <span class="mr-3 font-light">{{room.bedrooms}} bedroom{{room.bedrooms|pluralize}}</span>
+          <span class="mr-3 font-light">{{room.baths}} bath{{room.baths|pluralize}}</span>
+          <span class="mr-3 font-light">{{room.guests}} guest{{room.guests|pluralize}}</span>
         </div>
 
-      </div>
+        <p class="border-section">
+          {{room.description}}
+        </p>
+        <div class="border-section">
+            <h4 class="font-medium text-lg mb-5">Amenities</h4>
+            {% for a in room.amenities.all %}
+              <li class="mb-2">{{a}}</li>
+            {% endfor %}
+        </div>
+        <div class="border-section">
+          <h4 class="font-medium text-lg mb-5">Facilities</h4>
+          {% for f in room.facilities.all %}
+            <li class="mb-2">{{f}}</li>
+          {% endfor %}
+        </div>
+        <div class="border-section">
+          <h4 class="font-medium text-lg mb-5">House Rules</h4>
+          {% for h in room.house_rules.all %}
+            <li class="mb-2">{{h}}</li>
+          {% endfor %}
+        </div>
+        <div class="border-section">
+          <h4 class="font-medium text-2xl mb-5">Reviews</h4>
+          <div>
+            {{room.total_rating}} {{room.reviews.count}} review{{room.reviews.count|pluralize}}
+          </div>
+        </div>
+
+    </div>
 
       <div class="w-1/3">
 
