#23.2 Room photos interface

--- a/templates/rooms/room_edit.html
+++ b/templates/rooms/room_edit.html
@@ -12,7 +12,7 @@
         {% include 'mixins/room/room_form.html' with form=form cta="Update Room"%}
 
         <div class = mt-5>
-            <a href="#" class="font-medium text-green-600">Edit Photo</a>
+            <a href="{% url 'rooms:photos' room.pk %}" class="font-medium text-green-600">Edit Photo</a>
         </div>
     </div>
 
