--- a/templates/rooms/room_photos.html
+++ b/templates/rooms/room_photos.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="flex flex-col w-1/6 text-white">
                        <a class="btn-link mb-3 bg-green-400" href="#">Edit</a>
-                       <a class="btn-link mb-3 " href="#">Delete</a>
+                       <a class="btn-link mb-3 " href="{% url 'rooms:delete-photo' room.pk photo.pk%}">Delete</a>
                     </div>
                 </div>
             {% endfor %}
