--- a/templates/rooms/room_photos.html
+++ b/templates/rooms/room_photos.html
@@ -18,12 +18,16 @@
                         <span class="ml-5 text-xl">{{photo.caption}}</span>
                     </div>
                     <div class="flex flex-col w-1/6 text-white">
-                       <a class="btn-link mb-3 bg-green-400" href="#">Edit</a>
+                       <a class="btn-link mb-3 bg-green-400" href="{% url 'rooms:edit-photo' room.pk photo.pk%}">Edit</a>
                        <a class="btn-link mb-3 " href="{% url 'rooms:delete-photo' room.pk photo.pk%}">Delete</a>
                     </div>
                 </div>
             {% endfor %}
         
+            <div class="flex justify-center mt-5">
+                <a href="{% rul 'rooms:edit' room.pk%}" class="text-green-500 font-medium text-2xl"> Back to edit room</a>
+            </div>
+
     </div>
 
 {% endblock content %}
