--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,6 +1,17 @@
   <ul class = "flex items-center text-base font-semibold h-full">
     
     {% if user.is_authenticated %}
+    <li class="nav_link">
+        <a href="{% url 'users:switch-hosting' %}">
+            
+            {% if request.session.is_hosting %}
+              Stop hosting
+            {% else %}
+              Start hosting
+            {% endif %}
+              
+        </a>
+    </li>
     <li class="nav_link"><a href="{{user.get_absolute_url}}">Profile</a></li>
     <li class="nav_link"><a href="{% url "users:logout"%}">Log Out</a></li>
     {% else %}
