--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -12,8 +12,13 @@
               
         </a>
     </li>
-    <li class="nav_link"><a href="{{user.get_absolute_url}}">Profile</a></li>
-    <li class="nav_link"><a href="{% url "users:logout"%}">Log Out</a></li>
+    
+      {% if request.session.is_hosting %}
+        <li class="nav_link"><a href="{% url "rooms:create"%}">Upload Rooms</a></li>
+      {% endif %}
+        
+      <li class="nav_link"><a href="{{user.get_absolute_url}}">Profile</a></li>
+      <li class="nav_link"><a href="{% url "users:logout"%}">Log Out</a></li>
     {% else %}
       <li class="nav_link"><a href="{% url "users:login"%}">Log In</a></li>
       <li class="nav_link"><a href="{% url "users:signup"%}">Sign up</a></li>
