--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -98,7 +98,32 @@
           <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
         {% else %}
           {% if not request.session.is_hosting %}
-            {{room.get_calendars}}
+            
+            {% for calendar in room.get_calendars %}
+            <div class = "mb-10">
+                <span class="text-center font-medium text-lg block">{{calendar.get_month}}/{{calendar.year}}</span>
+                <div class ="cal-grid mb-4">
+                    {% for day in calendar.day_names %}
+                      <span>{{day}}</span>
+                    {% endfor %}
+                </div>
+                <div class = "cal-grid mb-4">
+                  
+                  {% for day in calendar.get_days %}
+                    
+                    {% if day != 0 %}
+                    <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-0.5 hover:bg-green-400 hover:text-white cursor-pointer">{{day}}</span>  
+                    {% else %}
+                      <span> </span>
+                    {% endif %}
+                      
+                    
+                  {% endfor %}
+                    
+                </div>
+            </div>  
+            {% endfor %}
+              
           {% endif %}     
         {% endif %}
             
