--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -108,16 +108,17 @@
                     {% endfor %}
                 </div>
                 <div class = "cal-grid mb-4">
-                  
                   {% for day in calendar.get_days %}
+                    {% if day.number != 0 %}
+                      {% if day.past %}
+                        <span class="rounded bg-gray-200 w-full text-center p-0.5 text-gray-400">{{day}}</span>
+                      {% else %}
+                        <span class="bg-gray-200 w-full text-center round text-gray-700 p-0.5 hover:bg-green-400 hover:text-white cursor-pointer">{{day}}</span>  
+                      {% endif %}  
                     
-                    {% if day != 0 %}
-                    <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-0.5 hover:bg-green-400 hover:text-white cursor-pointer">{{day}}</span>  
                     {% else %}
                       <span> </span>
                     {% endif %}
-                      
-                    
                   {% endfor %}
                     
                 </div>
