--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load capitalizee %}
 {% block page_name %} {{room.name}} {% endblock page_name %}
 
 {% block content %} 
@@ -97,8 +97,8 @@
         {% if room.host == user %}
           <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
         {% else %}
+        {{'something'|capitalizee}}
           {% if not request.session.is_hosting %}
-            
             {% for calendar in room.get_calendars %}
             <div class = "mb-10">
                 <span class="text-center font-medium text-lg block">{{calendar.get_month}}/{{calendar.year}}</span>
