--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load capitalizee %}
+{% load is_booked %}
 {% block page_name %} {{room.name}} {% endblock page_name %}
 
 {% block content %} 
@@ -96,8 +96,7 @@
         
         {% if room.host == user %}
           <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
-        {% else %}
-        {{'something'|capitalizee}}
+        {% else %}z 
           {% if not request.session.is_hosting %}
             {% for calendar in room.get_calendars %}
             <div class = "mb-10">
@@ -109,9 +108,12 @@
                 </div>
                 <div class = "cal-grid mb-4">
                   {% for day in calendar.get_days %}
+                  {% is_booked room day as is_booked_bool%}
                     {% if day.number != 0 %}
                       {% if day.past %}
                         <span class="rounded bg-gray-200 w-full text-center p-0.5 text-gray-400">{{day}}</span>
+                      {% elif is_booked_bool %}
+                        <span class="rounded bg-gray-200 w-full text-center p-0.5 text-gray-400 line-through">{{day}}</span>
                       {% else %}
                         <span class="bg-gray-200 w-full text-center round text-gray-700 p-0.5 hover:bg-green-400 hover:text-white cursor-pointer">{{day}}</span>  
                       {% endif %}  
