--- a/templates/reservations/detail.html
+++ b/templates/reservations/detail.html
@@ -35,10 +35,10 @@
     
             <div class="py-10 px-5">
                 {% if reservation.status == 'pending' %}
-                    <a href="#" class="btn-link block px-3 mb-3"> Cancel Reservation </a>
+                    <a href="{% url 'reservations:edit' reservation.pk 'cancel' %}" class="btn-link block px-3 mb-3"> Cancel Reservation </a>
                 {% endif %}
                 {% if reservation.room.host != user %}
-                    <a href="#" class="btn-link block px-3"> Confirm Reservation </a>
+                    <a href="{% url 'reservations:edit' reservation.pk 'confirm' %}" class="btn-link block px-3 mb-3"> Confirm Reservation </a>
                 {% endif %}
             </div>
         </div>
