#24.14 Reviewing rooms part 1

--- a/templates/reservations/detail.html
+++ b/templates/reservations/detail.html
@@ -32,15 +32,27 @@
                     <a href="#" class="font-medium text-green-500"> Send a Message </a>
                 </div>
             </div>
-    
-            <div class="py-10 px-5">
-                {% if reservation.status == 'pending' %}
-                    <a href="{% url 'reservations:edit' reservation.pk 'cancel' %}" class="btn-link block px-3 mb-3"> Cancel Reservation </a>
-                {% endif %}
-                {% if reservation.room.host != user %}
-                    <a href="{% url 'reservations:edit' reservation.pk 'confirm' %}" class="btn-link block px-3 mb-3"> Confirm Reservation </a>
-                {% endif %}
-            </div>
+            
+        {% if reservation.status != 'canceled' %}
+            {% if reservation.status == 'confirmed' and reservation.is_finished %}
+                <span class ="font-medium text-2xl mb-5 text-center w-1/2 block "> Write your review </span>
+                <form action="{% url 'reviews:create' reservation.room.pk %}" method="POST" class = "w-1/2">
+                    {% csrf_token %}
+                    {{form}}
+                    <button class="btn-link mt-3">Submit Review</button>
+                </form>
+            {% else %}
+                <div class="py-10 px-5">
+                    {% if reservation.status == 'pending' %}
+                        <a href="{% url 'reservations:edit' reservation.pk 'cancel' %}" class="btn-link block px-3 mb-3"> Cancel Reservation </a>
+                        {% if reservation.room.host == user %}
+                            <a href="{% url 'reservations:edit' reservation.pk 'confirm' %}" class="btn-link block px-3 mb-3"> Confirm Reservation </a>
+                        {% endif %}
+                    {% endif %}
+                </div>
+            {% endif %}
+        {% endif %}
+
         </div>
 {% endblock content %}
 
