--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -28,6 +28,7 @@
               <span class="mt-2 text-gray-500 ml-4">{{room.host.first_name}}</span>
             </a>
         </div>
+        <a class="btn-link block mb-10 w-1/3" href="{% url 'lists:save-room' room.pk %}">Save to Favorite</a>
         <div class="flex border-section">
           <span class="mr-3 font-light">{{room.room_type}}</span>
           <span class="mr-3 font-light">{{room.beds}} bed{{room.beds|pluralize}}</span>
@@ -96,7 +97,7 @@
         
         {% if room.host == user %}
           <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
-        {% else %}z 
+        {% else %}
           {% if not request.session.is_hosting %}
             {% for calendar in room.get_calendars %}
             <div class = "mb-10">
